--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "eco-tracker-app",
   "version": "1.0.0",
   "description": "A web app that helps users track their carbon footprint by logging daily activities",
+  "homepage": "https://YOUR_USERNAME.github.io/YOUR_REPO_NAME",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
@@ -26,7 +29,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "gh-pages": "^6.1.1"
   },
   "browserslist": {
     "production": [
