--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eco-tracker-app",
   "version": "1.0.0",
   "description": "A web app that helps users track their carbon footprint by logging daily activities",
-  "homepage": "https://YOUR_USERNAME.github.io/YOUR_REPO_NAME",
+  "homepage": "https://Aman2307.github.io/ECO-TRACKER-APP",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
