--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eco-tracker-app",
   "version": "1.0.0",
   "description": "A web app that helps users track their carbon footprint by logging daily activities",
-  "homepage": "https://Aman2307.github.io/ECO-TRACKER-APP",
+  "homepage": ".",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.3.0"
   },
   "browserslist": {
     "production": [
